[Cocoa] Web Inspector: fix bundle identifier lookup for enabling remote inspection https://bugs.webkit.org/show_bug.cgi?id=233015 <rdar://85277115>

Reviewed by Darin Adler.

* UIProcess/Inspector/WebInspectorUtilities.h:
* UIProcess/Inspector/WebInspectorUtilities.cpp:
(WebKit::bundleIdentifierForSandboxBroker):
To avoid repeating the logic, extract this code to a helper.

* UIProcess/Cocoa/WebInspectorPreferenceObserver.mm:
(-[WKWebInspectorPreferenceObserver init]):
* UIProcess/Cocoa/WebProcessProxyCocoa.mm:
(WebKit::WebProcessProxy::shouldEnableRemoteInspector):
Use the helper method.



Canonical link: https://commits.webkit.org/244673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286314 268f45cc-cd09-0410-ab3c-d52691b4dbfc