Source/WebKit/UIProcess/Inspector/WebInspectorUtilities.cpp
@@ -31,6 +31,7 @@
 #include "WebPageProxy.h"
 #include "WebProcessPool.h"
 #include "WebProcessProxy.h"
+#include <WebCore/RuntimeApplicationChecks.h>
 #include <wtf/HashMap.h>
 #include <wtf/NeverDestroyed.h>
 #include <wtf/WeakHashSet.h>
@@ -111,5 +112,17 @@ bool isInspectorPage(WebPageProxy& webPage)
 {
     return pageLevelMap().contains(&webPage);
 }
+
+#if PLATFORM(COCOA)
+CFStringRef bundleIdentifierForSandboxBroker()
+{
+    if (WebCore::applicationBundleIdentifier() == "com.apple.SafariTechnologyPreview"_s)
+        return CFSTR("com.apple.SafariTechnologyPreview.SandboxBroker");
+    if (WebCore::applicationBundleIdentifier() == "com.apple.Safari.automation"_s)
+        return CFSTR("com.apple.Safari.automation.SandboxBroker");
+
+    return CFSTR("com.apple.Safari.SandboxBroker");
+}
+#endif // PLATFORM(COCOA)
 
 } // namespace WebKit
